~/.vscode-root/logs/20190824T214258/exthost1/output_logging_20190825T012737/6-Code.log
[Running] node "/home/geovani/Projetos/bootcamp2019/desafio02/src/app/controllers/UserControllers.js"
/home/geovani/Projetos/bootcamp2019/desafio02/src/app/controllers/UserControllers.js:1
(function (exports, require, module, __filename, __dirname) { import * as Yup from 'yup';
                                                                     ^

SyntaxError: Unexpected token *
    at new Script (vm.js:80:7)
    at createScript (vm.js:274:10)
    at Object.runInThisContext (vm.js:326:10)
    at Module._compile (internal/modules/cjs/loader.js:664:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:712:10)
    at Module.load (internal/modules/cjs/loader.js:600:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:539:12)
    at Function.Module._load (internal/modules/cjs/loader.js:531:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:754:12)
    at startup (internal/bootstrap/node.js:283:19)

[Done] exited with code=1 in 0.277 seconds

